--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,38 +1,224 @@
+* {
+	scroll-behavior: smooth;	
+}
+
 .window {
 	margin: 10px;
-	padding: 10px;
-	display: block;
+	-webkit-user-drag: element;
+
+	display: flex;
+	flex-direction: column;
+	resize: both;
+	background-color: white;
+
+	max-height: 0px;
+	max-width: 0px;
+	position: absolute;
+	z-index: 9;
 
 	border: 2px solid black;
+	box-shadow: transparent;
+	border-color: transparent;
 	border-radius: 8px;
 
+	box-shadow: 8px 8px 0px transparent;
+	padding: 0;
+
+	transition: 
+			max-height 0.3s ease-in-out, 
+			max-width 0.3s ease-in-out,
+			box-border 0.3s ease-in-out, 
+			border-color 0.3s ease-in-out; 
+
+	overflow: hidden;
+}
+
+.window.active {
+	border-color: black;
 	box-shadow: 8px 8px 0px rgba(0, 0, 0, 0.3);
+	max-height: 1000px;
+	max-width: 1000px;
+	display: flex;
+	transition-delay: 0.3s; /* Delay the opening transition */
+}
+
+
+.window-header {
+	padding: 0px;
+	display: flex;
+	cursor: move;
+	justify-content: space-between;
+	border-bottom: 2px solid black;
+}
+
+.window-title {
+	margin: 2px;
+	align-self: flex-start;
+	display: block;
+	width: fit-content;
+}
+
+.window-content {
+	padding: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 0;
+
+	max-width: 60ch;
+}
+
+.window-content.socials {
+	flex-direction: row;
+}
+
+.window-button.window-close {
+	cursor: pointer;
+	padding: 3px;
+	border-left: 2px solid black;
+	border-top-right-radius: 6px;
+	background-color: rgb(223, 24, 47);
 }
 
 .window.hidden {
 	display: none;
 }
 
-.hover-box {
-	margin: 10px;
-	padding: 0px 10px;
+iframe {
+	aspect-ratio: 16/9;
+	max-width: 100%;
+}
+
+.button {
+	margin: 5px;
+	padding: 10px;
+	gap: 10px;
 
 	display: flex;
 	align-items: center;
 
-	width: 250px;
-	height: 35px;
-
-	border: 2px solid black;
-	border-radius: 8px;
+	height: 25px;
+	max-width: 250px;
 
 	background-color: #FFF;
-	box-shadow: 0px 0px 0px black;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+	color: black;
+	border: 2px solid;
+	border-radius: 8px;
+
+	box-shadow: 0px 0px;
+
 	transform: translate(0px, 0px);
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.hover-box:hover {
-	box-shadow: 8px 8px 0px black;
+.button:hover {
+	cursor: pointer;
+}
+
+.button.popout:hover {
+	box-shadow: 8px 8px;
 	transform: translate(-8px, -8px);
 }
+
+.icon.button {
+	height: 25px;
+	width: 25px;
+	max-width: 25px;
+	text-align: center;
+}
+
+.github.popout  {
+	color: black;
+}
+
+.itchio.popout {
+	color: #FA5C5C;
+}
+
+.linkedin.popout {
+	color: #007EBB;
+}
+
+.instagram.popout {
+	color: rgba(255,0,168,1);
+}
+
+.twitter.popout {
+	color: black;
+}
+
+.discord.popout {
+	color: #5865F2;
+}
+
+.mail.popout {
+	color: red;
+}
+
+a {
+	text-decoration: none;
+}
+
+body {
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	background-color: #f8f8f8;
+	color: #333;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	margin: 0;
+  }
+
+  .accordion {
+	width: 300px;
+  }
+
+  .accordion-item {
+	background-color: #fff;
+	margin-bottom: 1px;
+	cursor: pointer;
+	padding: 16px;
+	text-align: left;
+	font-weight: bold;
+	border: 1px solid #ddd;
+	transition: background-color 0.3s, color 0.3s;
+  }
+
+  .accordion-item:hover {
+	background-color: #f0f0f0;
+  }
+
+  .accordion-content {
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.5s ease-in-out, padding 0.3s ease-in-out;
+  }
+
+  .accordion-item.active {
+	background-color: #e0e0e0;
+	color: #555;
+  }
+
+  .accordion-item.active .accordion-content {
+	max-height: 500px; /* Set a value based on your content height */
+	padding: 12px;
+	transition-delay: 0.3s; /* Delay the opening transition */
+  }
+
+  #mydiv {
+	position: absolute;
+	z-index: 9;
+	background-color: #f1f1f1;
+	border: 1px solid #d3d3d3;
+	text-align: center;
+  }
+  
+  #mydivheader {
+	padding: 10px;
+	cursor: move;
+	z-index: 10;
+	background-color: #2196F3;
+	color: #fff;
+  }
