--- a/Styles/style.css
+++ b/Styles/style.css
@@ -20,7 +20,7 @@
 	display: flex;
 	flex-direction: column;
 
-	resize: both;
+	resize: none;
 
 	color: var(--border-color);
 	background-color: transparent;
