--- a/Styles/style.css
+++ b/Styles/style.css
@@ -28,6 +28,8 @@
 
 	max-height: 0px;
 	max-width: 0px;
+	min-height: 0px;
+	min-width: 0px;
 	position: absolute;
 	z-index: 9;
 
@@ -42,6 +44,8 @@
 	transition: 
 			max-height 0.3s ease-in-out, 
 			max-width 0.3s ease-in-out,
+			min-height 0.3s ease-in-out, 
+			min-width 0.3s ease-in-out,
 			box-border 0.3s ease-in-out, 
 			background-color 0.3s ease-in-out, 
 			border-color 0.3s ease-in-out; 
@@ -58,7 +62,6 @@
 	max-height: 1000px;
 	max-width: 1000px;
 	display: flex;
-	transition-delay: 0.3s; /* Delay the opening transition */
 }
 
 
@@ -197,6 +200,10 @@ iframe {
 
 a {
 	text-decoration: none;
+}
+a:hover {
+	cursor: pointer;
+	text-decoration: underline;
 }
 
 body {
