--- a/Styles/style.css
+++ b/Styles/style.css
@@ -147,6 +147,35 @@
 .window.hidden {
 	display: none;
 }
+.image-grid {
+	display: grid;
+	grid-template-columns: repeat(3, auto); /* Three columns */
+	grid-template-rows: repeat(2, auto); /* Two rows */
+	grid-gap: 8px; /* Adjust the gap between images */
+	width: 100%;
+  }
+  
+  .image-grid-item {
+	/* Set the aspect ratio for the grid items */
+	position: relative;
+	width: calc(100% ); /* Adjust for gap */
+	overflow: hidden;
+	border-radius: 6px;
+  }
+  
+  .image-grid-item.big {
+	/* Set the bigger size for the first image */
+	grid-column: span 2; /* Span two columns */
+	grid-row: span 2; /* Span two rows */
+  }
+  
+  .image-grid-item img {
+	/* Ensure the image fills the grid item */
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	object-fit: cover; /* Maintain aspect ratio and fill */
+  }
 
 iframe {
 	aspect-ratio: 16/9;
@@ -181,6 +210,7 @@ iframe {
 
 .button:hover {
 	cursor: pointer;
+	
 }
 
 .button.popout:hover {
