--- a/Styles/style.css
+++ b/Styles/style.css
@@ -140,6 +140,10 @@
 	max-width: 700px;
 }
 
+.window-content.defendthekingdom {
+	max-width: 700px;
+}
+
 .window-content.geckoparty {
 	max-width: 800px;
 }
