--- a/Styles/style.css
+++ b/Styles/style.css
@@ -140,6 +140,10 @@
 	max-width: 700px;
 }
 
+.window-content.hydreomiel {
+	max-width: 650px;
+}
+
 .window-content.defendthekingdom {
 	max-width: 700px;
 }
