--- a/Styles/style.css
+++ b/Styles/style.css
@@ -9,197 +9,40 @@
 	--background-color: #EEF1FF;
 	--background-white-color: rgb(241, 237, 243);
 	--window-color: #f8f8f8;
+
+	--instagram-color: rgba(255,0,168,1);
+	--instagram-color-alpha : rgba(255,0,168,.1);
+
+	--linkedin-color: #007EBB;
+	--linkedin-color-alpha: #007EBB10;
+
+	--discord-color: #5865F2;
+	--discord-color-alpha: #5865F210;
+
+	--itchio-color: #FA5C5C;
+	--itchio-color-alpha: #FA5C5C10;
+
+	--twitter-color: #000000;
+	--twitter-color-alpha: #00000010;
+
+	--github-color: #000000;
+	--github-color-alpha: #00000010;
+
+	--mail-color: #FF0000;
+	--mail-color-alpha: #FF000010;
+
+	--escaunes-color: #FFAA02;
+	--escaunes-color-alpha: #FFAA0210;
+
+	--beerylis-color: #eec623;
+	--beerylis-color-alpha: #eec62310;
+
+	--ignite-color: #f38f59;
+	--ignite-color-alpha: #f38f5910;
+
+	--pyrite-color: #c4aa52;
+	--pyrite-color-alpha: #c4aa5210;
 }
-
-
-
-.window {
-	z-index: auto;
-	-webkit-user-drag: element;
-	transform-origin: 50% 50%;
-	
-	display: flex;
-	flex-direction: column;
-
-	resize: none;
-
-	color: var(--border-color);
-	background-color: transparent;
-
-
-	max-height: 0px;
-	min-height: 0px;
-	min-width: 0px;
-	position: absolute;
-	z-index: 9;
-
-	border: 2px solid;
-	box-shadow: transparent;
-	border-color: transparent;
-	border-radius: 8px;
-
-	box-shadow: 8px 8px 0px transparent;
-	padding: 0;
-
-	transition: 
-			max-height 0.3s ease-in-out, 
-			max-width 0.3s ease-in-out,
-			min-height 0.3s ease-in-out, 
-			box-border 0.3s ease-in-out, 
-			border-color 0.5s ease-in, 
-			background-color 0.3s ease-in-out, 
-			border-radius 0.3s ease-in-out; 
-
-	overflow: hidden;
-}
-
-.window.active {
-	min-width: 20ch;
-	min-height: 100px;
-	background-color: var(--window-color);
-	border-color: var(--border-color);
-	box-shadow: 8px 8px 0px var(--shadow-color);
-	max-height: 1000px;
-	border-radius: 8px;
-	max-width: 1000px;
-	display: flex;
-	
-	transition: 
-			max-height 0.3s ease-in-out, 
-			max-width 0.3s ease-in-out,
-			min-height 0.3s ease-in-out, 
-			box-border 0.3s ease-in-out, 
-			border-color 0.1s ease-in, 
-			background-color 0.3s ease-in-out, 
-			border-radius 0.3s ease-in-out; 
-}
-
-
-.window-header {
-	padding-left: 10px;
-	background-color: var(--header);
-	display: flex;
-	cursor: move;
-	justify-content: space-between;
-	border-bottom: 2px solid var(--border-color);
-}
-
-.window-title {
-	font-weight: bold;
-	margin: 2px;
-	align-self: flex-start;
-	display: block;
-	width: fit-content;
-}
-
-.window-content {
-	margin-top: 3px;
-	margin-bottom: 3px;
-	margin-right: 3px;
-	padding-top: 7px;
-	padding-bottom: 7px;
-	padding-right: 7px;
-	padding-left: 10px;
-	display: flex;
-	flex-direction: column;
-	gap: 5px;
-	max-height: 80vh;
-	overflow-y: auto;
-	scroll-behavior: smooth;
-	max-width: 60ch;
-}
-
-/* width */
-.window-content::-webkit-scrollbar {
-	width: 5px;
-  }
-  
-  /* Track */
-  .window-content::-webkit-scrollbar-track {
-	border-top: 10px solid transparent; /* Margin on top */
-	border-bottom: 10px solid transparent; /* Margin on bottom */
-	background-color: transparent;
-  }
-  
-  /* Handle */
-  .window-content::-webkit-scrollbar-thumb {
-	border-radius: 5px;
-	padding: 10px;
-	background: var(--header);
-  }
-  
-  /* Handle on hover */
-  .window-content::-webkit-scrollbar-thumb:hover {
-	background: var(--border-color);
-  }
-
-.window-content.socials {
-	flex-direction: row;
-}
-
-.window-content.stellaria {
-	max-width: 700px;
-}
-
-.window-content.hydreomiel {
-	max-width: 650px;
-}
-
-.window-content.defendthekingdom {
-	max-width: 700px;
-}
-
-.window-content.geckoparty {
-	max-width: 800px;
-}
-
-.window-button.window-close {
-	cursor: pointer;
-	padding: 3px;
-	border-left: 2px solid var(--border-color);
-	border-top-right-radius: 6px;
-	background-color: rgb(207, 72, 88);
-}
-
-.window.hidden {
-	display: none;
-}
-
-.image-grid {
-	display: grid;
-	grid-template-columns: repeat(3, auto); /* Three columns */
-	grid-template-rows: repeat(2, auto); /* Two rows */
-	grid-gap: 8px; /* Adjust the gap between images */
-	width: 100%;
-  }
-  
-  .image-grid-item {
-	/* Set the aspect ratio for the grid items */
-	position: relative;
-	width: calc(100% ); /* Adjust for gap */
-	overflow: hidden;
-	aspect-ratio: 16/9;
-	border-radius: 6px;
-  }
-  
-  .image-grid-item.big {
-	aspect-ratio: 16/9;
-	/* Set the bigger size for the first image */
-	grid-column: span 2; /* Span two columns */
-	grid-row: span 2; /* Span two rows */
-  }
-  
-  .image-grid-item img {
-	/* Ensure the image fills the grid item */
-	position: absolute;
-	aspect-ratio: 16/9;
-	width: 100%;
-	height: 100%;
-	object-fit: cover; /* Maintain aspect ratio and fill */
-  }
-  .screenshot {
-	border-radius: 6px;
-  }
 
 iframe {
 	aspect-ratio: 16/9;
@@ -208,104 +51,6 @@ iframe {
 	max-width: 500px;
     margin-left: auto;
     margin-right: auto;
-}
-
-
-.button {
-	margin: 5px;
-	padding: 10px;
-	gap: 10px;
-
-	display: flex;
-	align-items: center;
-
-	height: 25px;
-	max-width: 250px;
-
-	background-color: var(--background-color);
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-	color: var(--border-color);
-	border: 2px solid;
-	border-radius: 8px;
-	font-weight: bold;
-
-	box-shadow: 0px 0px;
-
-	transform: translate(0px, 0px);
-	transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.button:hover {
-	cursor: pointer;
-	
-}
-
-.button.popout:hover {
-	box-shadow: 8px 8px;
-	transform: translate(-8px, -8px);
-}
-
-.icon.button {
-	height: 25px;
-	width: 25px;
-	max-width: 25px;
-	text-align: center;
-}
-
-.github.popout  {
-	color: black;
-	background-color: #00000010;
-}
-
-.itchio.popout {
-	color: #FA5C5C;
-	background-color: #FA5C5C10;
-}
-
-.linkedin.popout {
-	color: #007EBB;
-	background-color: #007dbb10;
-}
-
-.instagram.popout {
-	color: rgba(255,0,168,1);
-	background-color: rgba(255,0,168,.1);
-}
-
-.twitter.popout {
-	color: black;
-	background-color: #00000010;
-}
-
-.discord.popout {
-	color: #5865F2;
-	background-color: #5865F210;
-}
-
-.mail.popout {
-	color: red;
-	background-color: #FF000010;
-}
-
-.escaunes.popout {
-	color: #FFAA02;
-	background-color: #FFAA0210;
-}
-
-.beerylis.popout {
-	color: #ff6702;
-	background-color: #ff670210;
-}
-
-.ignite.popout {
-	color: #f38f59;
-	background-color: #f38f5910;
-}
-
-.pyrite.popout {
-	color: #c4aa52;
-	background-color: #c4aa5210;
 }
 
 a {
@@ -345,52 +90,4 @@ body {
 	height: 100vh;
 	margin: 0;
 	scroll-behavior: smooth;
-}
-
-.accordion {
-	margin-right: 2em;
-	width: 300px;
-	align-self: end;
-}
-
-.accordion-item {
-	background-color: var(--background-color);
-	margin-bottom: 5px;
-	cursor: pointer;
-	font-size: 1.2rem;
-	padding: 16px;
-
-	border-radius: 8px;
-	border: 2px solid var(--border-color);
-
-	text-align: left;
-	font-weight: bold;
-	transition: 
-		background-color 0.3s, 
-		color 0.3s;
-}
-
-.accordion-item:hover {
-	background-color: var(--background-color);
-}
-
-.accordion-content {
-	font-size: 1rem;
-	max-height: 0;
-	overflow: hidden;
-	transition: 
-		max-height 0.5s ease-in-out, 
-		padding 0.3s ease-in-out;
-}
-
-.accordion-item.active {
-	background-color: var(--sub-header);
-	color: var(--border-color);
-	padding: -12px;
-}
-
-.accordion-item.active .accordion-content {
-	max-height: 500px; /* Set a value based on your content height */
-	padding: 4px;
-	transition-delay: 0.3s; /* Delay the opening transition */
 }
