--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -35,6 +35,16 @@
 	transform: translate(-8px, -8px);
 }
 
+.button.popout.back {
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	top: 25px;
+	left: 25px; 
+	text-align: center;
+	text-justify: center;
+}
+
 .icon.button {
 	height: 25px;
 	width: 25px;
