--- a/styles/style.css
+++ b/styles/style.css
@@ -74,6 +74,15 @@ a:visited {
 	
 }
 
+.centered {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: fit-content;
+	padding: 10px;
+	
+}
+
 .small-icon {
 	color: var(--border-color);
 	flood-color: var(--border-color);
