--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -7,7 +7,7 @@
 
 @font-face {
     font-family: 'Garet';
-    src: url('../fonts/Garet-Book.ttf') format('truetype');
+    src: url('../fonts/Garet-Heavy.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
@@ -45,8 +45,4 @@
 .title {
     font-family: 'Garet', sans-serif;
     font-weight: bolder;
-}
-
-* {
-    font-family: 'Lato', sans-serif;
 }
