--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 * {
 	scroll-behavior: smooth;	
 
+    font-family: 'Lato', sans-serif;
+	
 	--border-color: #5a5c90;
 	--shadow-color: #5a5c9054;
 	--header: #B1B2FF;
@@ -55,6 +57,7 @@ iframe {
 
 a {
 	text-decoration: none;
+	color: var(--border-color);
 }
 
 a:hover {
@@ -62,9 +65,6 @@ a:hover {
 	text-decoration: underline;
 }
 
-a:visited {
-	color: var(--border-color);
-}
 
 .flex-array {
 	display: flex;
@@ -91,6 +91,8 @@ a:visited {
 p {
 	max-width: 70ch;
 	margin-top: 0px;
+	text-align: justify;
+	text-align-last: left;
 }
 
 body {
