--- a/styles/blog_page.css
+++ b/styles/blog_page.css
@@ -2,13 +2,13 @@
     margin-top: 5em;
     margin-bottom: 1em;
     font-family: 'Garet', sans-serif;
-    font-size: xx-large;
+    font-size: 2em;
     font-weight: bold;
 }
 
 .chapter-title > * {
     font-family: 'Garet', sans-serif;
-    font-size: x-large;
+    font-size: 1.5em;
     font-weight: bold;
 }
 
