--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -50,6 +50,96 @@
 	text-align: center;
 }
 
+
+.image-icon {
+	margin: 5px;
+	padding: 10px;
+	gap: 10px;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	height: 25px;
+	width: 25px;
+
+	background-color: var(--background-color);
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+	color: var(--border-color);
+	border: 2px solid;
+	border-radius: 8px;
+	font-weight: bold;
+	
+}
+
+.icon.cs {
+	color: var(--cs-color);
+	background-color: var(--cs-color-alpha);
+	
+}
+.icon.cpp {
+	color: var(--cpp-color);
+	background-color: var(--cpp-color-alpha);
+	
+}
+.icon.rust {
+	color: var(--rust-color);
+	background-color: var(--rust-color-alpha);
+	
+}
+.icon.lua {
+	color: var(--lua-color);
+	background-color: var(--lua-color-alpha);
+	
+}
+.icon.html {
+	color: var(--html-color);
+	background-color: var(--html-color-alpha);
+	
+}
+.icon.css {
+	color: var(--css-color);
+	background-color: var(--css-color-alpha);
+	
+}
+.icon.unreal {
+	color: var(--unreal-color);
+	background-color: var(--unreal-color-alpha);
+	
+}
+.icon.unity {
+	color: var(--unity-color);
+	background-color: var(--unity-color-alpha);
+	
+}
+.icon.godot {
+	color: var(--godot-color);
+	background-color: var(--godot-color-alpha);
+	
+}
+.icon.maui {
+	color: var(--maui-color);
+	background-color: var(--maui-color-alpha);
+	
+}
+.icon.blazor {
+	color: var(--blazor-color);
+	background-color: var(--blazor-color-alpha);
+	
+}
+.icon.monogame {
+	color: var(--monogame-color);
+	background-color: var(--monogame-color-alpha);
+	
+}
+.icon.fna {
+	color: var(--fna-color);
+	background-color: var(--fna-color-alpha);
+	
+}
+
+
 /** Specifics buttons settings **/
 
 .github.popout  {
