--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,36 +1,48 @@
-
 .tooltip {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .tooltip .tooltiptext {
-    visibility: hidden;
-    min-width: 60px;
-    background-color: black;
+    display:inline-block;
+    position:relative;
+    text-align:left;
+}
+
+.tooltip .tooltiptext {
+    min-width:60px; 
+    top:-2px;
+    left:50%;
+    transform:translate(-50%, -100%);
+    padding:5px 10px;
     color: var(--background-color);
+    background-color:#000000;
+    font-weight:normal;
+    border-radius:8px;
+    position:absolute;
     text-align: center;
-    justify-content: center;
-    border-radius: 6px;
-    padding: 5px 5px;
-    position: absolute;
-    z-index: 10000;
-    bottom: 150%;
-    margin-left: -5px;
-    margin-bottom: -25px;
-  }
-  
-  .tooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: black transparent transparent transparent;
-  }
-  
-  .tooltip:hover .tooltiptext {
-    visibility: visible;
-  }
+    z-index:99999999;
+    box-sizing:border-box;
+    box-shadow:0 1px 8px transparent;
+    visibility:hidden; opacity:0; transition:opacity 0.3s;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility:visible; opacity:1;
+}
+
+.tooltip .tooltiptext i {
+    position:absolute;
+    top:100%;
+    left:50%;
+    margin-left:-5px;
+    width:10px;
+    height:5px;
+    overflow:hidden;
+}
+
+.tooltip .tooltiptext i::after {
+    content:'';
+    position:absolute;
+    width:5px;
+    height:5px;
+    left:50%;
+    transform:translate(-50%,-50%) rotate(45deg);
+    background-color:#000000;
+    box-shadow:0 1px 8px transparent;
+}
